--- a/Perturbation_Analysis_Parabolic_PDE.ipynb
+++ b/Perturbation_Analysis_Parabolic_PDE.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -48,19 +48,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\frac{\\partial f(\\theta,t)}{\\partial t} + \\frac{\\partial}{\\partial \\theta} (\\omega(\\theta)\\,f(\\theta,t)) &= \\varepsilon\\frac{\\partial^2f(\\theta,t)}{\\partial \\theta^2}\\\\\n",
     "f(\\theta,0) &= F(\\theta)\\\\\n",
     "f(\\theta,t) &= f(\\theta+2\\pi,t)\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\omega(\\theta)$ is given over $0 \\leq \\theta \\leq 2\\pi$, periodic and positive."
+    "where $\\omega(\\theta)$ is given over $0 \\leq \\theta \\leq 2\\pi$, periodic and positive. The previous equation describes advection in the periodic domain with a small diffusion, since $\\varepsilon$ is a tiny value."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The method of multiple scales work with two scales. First, the advection occurs on the fast scale $\\tau = t$ and the diffusion on the slow scale $T = \\varepsilon\\,t$. The method propose the following asymptotic expansion:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "f(\\theta,t; \\varepsilon) \\,\\,\\,\\tilde{}\\,\\,\\, f_0(\\theta,\\tau,T) + \\varepsilon\\,f_1(\\theta,\\tau,T)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -83,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -98,13 +159,13 @@
     "    return 0\n",
     "    \n",
     "def F(theta):\n",
-    "    return -theta*(theta-2*np.pi)\n",
-    "    #return 5*np.sin(theta)\n"
+    "    #return -theta*(theta-2*np.pi)\n",
+    "    return 5*np.sin(theta)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -139,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -155,10 +216,10 @@
     "    T = np.linspace(0,100,M)\n",
     "    \n",
     "    plt.plot(Theta[:-1],y1[:,i],\"yo\", label=\"eps=0\")\n",
-    "    plt.plot(Theta[:-1],y2[:,i],\"bo\", label=\"eps=0.1\")\n",
-    "    plt.plot(Theta[:-1],y3[:,i],\"ro\", label = \"eps=1\")\n",
-    "    plt.plot(Theta[:-1],y4[:,i],\"go\", label = \"eps=100\")\n",
-    "    plt.ylim(-1,10)\n",
+    "    #plt.plot(Theta[:-1],y2[:,i],\"bo\", label=\"eps=0.1\")\n",
+    "    #plt.plot(Theta[:-1],y3[:,i],\"ro\", label = \"eps=1\")\n",
+    "    #plt.plot(Theta[:-1],y4[:,i],\"go\", label = \"eps=100\")\n",
+    "    plt.ylim(-10,10)\n",
     "    plt.grid(True)\n",
     "    plt.title(\"t = \"+str(T[i])+\" [s]\")\n",
     "    plt.legend(loc=\"best\")\n",
@@ -169,13 +230,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "774aee3c1cb24edc8355fedf949e8f01"
+       "model_id": "0cb564af433a472096cfaaaad787556a"
       }
      },
      "metadata": {},
@@ -187,7 +248,7 @@
        "<function __main__.simulation>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,6 +296,29 @@
     "        b[:,j+1] = np.linalg.solve(A,b[:,j])\n",
     "    return b"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Commonly, exist some phenomena that can be represented as mathematical models, using differential equations. In some cases, simplificationes in the moment of making the model can reduce the difficulty of the representation, but in change, the model could not consider the effect of small factors that are occurring. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
