--- a/Perturbation_Analysis_Parabolic_PDE.ipynb
+++ b/Perturbation_Analysis_Parabolic_PDE.ipynb
@@ -231,7 +231,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -337,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
