--- a/Perturbation_Analysis_Parabolic_PDE.ipynb
+++ b/Perturbation_Analysis_Parabolic_PDE.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -144,28 +144,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def w(theta):\n",
-    "    #return (np.sin(0.5*theta))**2\n",
-    "    return 1\n",
+    "    return (np.sin(0.5*theta))**2\n",
+    "    #return 1\n",
     "    \n",
     "def wp(theta):\n",
-    "    #return 0.5*np.sin(theta)\n",
-    "    return 0\n",
+    "    return 0.5*np.sin(theta)\n",
+    "    #return 0\n",
     "    \n",
     "def F(theta):\n",
     "    #return -theta*(theta-2*np.pi)\n",
-    "    return 5*np.sin(theta)\n"
+    "    #return 5*np.sin(theta)\n",
+    "    return (-theta**2+2*np.pi*theta)*0.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -192,7 +193,7 @@
     "            A[i-1,i] = -eps*dt/dth**2\n",
     "        if i<N-2:    \n",
     "            A[i+1,i] = -w(Theta[i])*dt/dth - eps*dt/dth**2\n",
-    "    #print(A)\n",
+    "    print(A)\n",
     "    for j in range(M-1):\n",
     "        b[:,j+1] = np.linalg.solve(A,b[:,j])\n",
     "    return b"
@@ -200,7 +201,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.40528473 -0.20264237  0.          0.        ]\n",
+      " [-0.20264237  5.49683417 -0.20264237  0.        ]\n",
+      " [ 0.         -1.7941918   4.5883836  -0.20264237]\n",
+      " [ 0.          0.         -3.38574123  0.49683417]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0.00000000e+00,   1.10642809e-01,   1.20678211e-01,\n",
+       "          1.53409016e-01,   2.99431848e-01],\n",
+       "       [  3.70110165e+00,   7.67285993e-01,   2.90879149e-01,\n",
+       "          4.68338082e-01,   1.31945749e+00],\n",
+       "       [  4.93480220e+00,   2.43839082e+00,   3.98324370e+00,\n",
+       "          1.11152001e+01,   3.31807382e+01],\n",
+       "       [  3.70110165e+00,   2.40661025e+01,   7.55832380e+01,\n",
+       "          2.27875692e+02,   6.84769906e+02]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "implicit_method(5,5,0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -230,15 +268,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0cb564af433a472096cfaaaad787556a"
+       "model_id": "bf78fedb81a94fff97af797a191a754f"
       }
      },
      "metadata": {},
@@ -250,7 +286,7 @@
        "<function __main__.simulation>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
