FFT issue fixed

--- a/Perturbation_Analysis_Parabolic_PDE.ipynb
+++ b/Perturbation_Analysis_Parabolic_PDE.ipynb
@@ -9,10 +9,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -383,15 +381,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 76,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def implicit_method(w,wp,F,N,M,eps):\n",
     "    Theta = np.linspace(0,2*np.pi,N)\n",
-    "    T = np.linspace(0,20,M)\n",
+    "    T = np.linspace(0,4,M)\n",
     "\n",
     "    dth = Theta[1]-Theta[0]\n",
     "    dt = T[1]-T[0]\n",
@@ -413,7 +409,7 @@
     "            A[i-1,i] = -eps*dt/dth**2\n",
     "        if i<N-2:    \n",
     "            A[i+1,i] = -w(Theta[i])*dt/dth - eps*dt/dth**2\n",
-    "    \n",
+    "    print(\"A\",A)\n",
     "    for j in range(M-1):\n",
     "        b[:-1,j+1] = np.linalg.solve(A,b[:-1,j])\n",
     "        b[-1,:] = b[0,:]\n",
@@ -463,10 +459,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 77,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def spectralDerivativeByFFT(v,nu=1):\n",
@@ -506,9 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -521,15 +513,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 78,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def explicit_fft_method(w,wp,F,N,M,eps):\n",
     "    Theta = np.linspace(0,2*np.pi,N)\n",
-    "    T = np.linspace(0,20,M)\n",
+    "    T = np.linspace(0,4,M)\n",
     "    dt = T[1]-T[0]\n",
     "    \n",
     "    #defining a matrix to save all the values of the function in all the time steps\n",
@@ -544,27 +534,30 @@
     "    for n in range(M-1):\n",
     "        #calculate the first derivative with FFT\n",
     "        w1[1:] = spectralDerivativeByFFT(v[1:,n],1)\n",
-    "        w1[0] = w2[-1]\n",
+    "        w1[0] = w1[-1]\n",
     "        #calculate the second derivative with FFT\n",
     "        w2[1:] = spectralDerivativeByFFT(v[1:,n],2)\n",
     "        w2[0] = w2[-1]\n",
     "              \n",
     "        #get the values of the function in the next time\n",
-    "        v[:,n+1] = eps*dt*w2 - dt*w(Theta)*w1+np.ones(N)-dt*wp(Theta)*v[:,n]\n",
+    "        v[:,n+1] = eps*dt*w2 - dt*w(Theta)*w1+(np.ones(N)-dt*wp(Theta))*v[:,n]\n",
     "        #print(\"eps*dt*w2\",eps*dt*w2)\n",
+    "        #print(\"dt\",dt)\n",
+    "        #print(\"w1\",w1)\n",
+    "        #print(\"w(Theta)\",w(Theta))\n",
     "        #print(\"dt*w(Theta)*w1\",dt*w(Theta)*w1)\n",
     "        #print(\"dt*wp(Theta)*v[:,n]\",dt*wp(Theta)*v[:,n])\n",
-    "    \n",
+    "        #print(\"\")\n",
+    "        #print(\"v[:,n+1]\",v[:,n+1])\n",
+    "        #print(\"\")\n",
     "        #break\n",
     "    return v"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 81,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def simulation(i,N,M,eps=0.001):\n",
@@ -590,10 +583,10 @@
     "    #y3 = fft_method(w,wp,F,N,M,0.01)\n",
     "    #y4 = fft_method(w,wp,F,N,M,0.0001)\n",
     "    Theta = np.linspace(0,2*np.pi,N)\n",
-    "    T = np.linspace(0,100,M)\n",
+    "    T = np.linspace(0,4,M)\n",
     "    \n",
     "    plt.plot(Theta[:],y1[:,i],\"-yo\", label=\"FFT\")\n",
-    "    plt.plot(Theta[:],y2[:,i],\"bo\", label=\"IM\")\n",
+    "    plt.plot(Theta[:],y2[:,i],\"-bo\", label=\"IM\")\n",
     "    #plt.plot(Theta[:-1],y3[:-1,i],\"ro\", label=\"eps=0.01\")\n",
     "    #plt.plot(Theta[:-1],y3[:-1,i],\"ro\", label=\"eps=0.0001\")\n",
     "    #plt.plot(Theta[:-1],y4[:-1,i],\"ko\", label=\"eps=0.0001\")\n",
@@ -607,14 +600,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
+   "execution_count": 82,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86683d164bbb4922b7951256d2dd380c"
-      }
+       "model_id": "f8696ead13e948fdaff4f50b943c23db",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>interactive</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in Jupyter Notebook or JupyterLab, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another notebook frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "interactive(children=(IntSlider(value=49, description='i', max=99), IntSlider(value=80, description='N', max=240, min=-80), IntSlider(value=100, description='M', max=300, min=-100), FloatSlider(value=0.001, description='eps', max=0.003, min=-0.001), Output()), _dom_classes=('widget-interact',))"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -625,13 +640,13 @@
        "<function __main__.simulation>"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "interact(simulation,i=(0,69),N=80,M=70)"
+    "interact(simulation,i=(0,99),N=80,M=100)"
    ]
   },
   {
