some advances with IVP asociated to variable s

--- a/Perturbation_Analysis_Parabolic_PDE.ipynb
+++ b/Perturbation_Analysis_Parabolic_PDE.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -220,7 +220,9 @@
     "\n",
     "$$\n",
     "\\theta(s,\\tau) = \\Theta(\\tau - s)\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "Where $s$ is the time delay since $\\theta$ was zero."
    ]
   },
   {
@@ -250,6 +252,10 @@
     "\n",
     "$$\n",
     "u_0(\\theta, \\tau, T) = \\frac{A_0(s,T)}{\\omega(\\theta)}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "u_0(\\Theta(\\tau-s), \\tau, T) = \\frac{A_0(s,T)}{\\omega(\\Theta(\\tau-s))}\n",
     "$$"
    ]
   },
@@ -391,22 +397,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAD8CAYAAACMwORRAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHGZJREFUeJzt3Xt4HPV97/H315Jv8kU2lrjEtiRTTMAF2yQ6YEoSzDXm\nEhtKQqHilodE6UnhkIQ0gbhPOCV1C6cXOGkJoCaUSxQoJUCc1sWEe07BgEzAYMzFYFu2A5Zs2UJG\ngHz5nj9mZa/Wq92VNbujnf28nmef2fntb3e+Y9Yf//jN7Iy5OyIiEi/Doi5ARETCp3AXEYkhhbuI\nSAwp3EVEYkjhLiISQwp3EZEYUriLiMSQwl1EJIYU7iIiMVSerYOZ3QGcDbS5+1H99JkL3AwMBza7\n+4nZPreqqsrr6uoGVKyISKlbvnz5ZnevztYva7gDdwL/DNyd7kUzmwD8BJjn7q1mdmAuBdbV1dHS\n0pJLVxERSTCzdbn0yzot4+7PAB0Zuvwp8KC7tyb6t+VUoYiI5E0Yc+6HAxPN7CkzW25ml4TwmSIi\nMgi5TMvk8hmfBU4BRgPPmdkyd38rtaOZNQKNADU1NSFsWkRE0glj5L4BWOruH7r7ZuAZYFa6ju7e\n5O717l5fXZ31eICIiOynMML9V8DnzKzczCqA44BVIXyuiIjsp6zhbmb3As8BnzazDWZ2uZn9mZn9\nGYC7rwIeAVYALwA/dffX8lm0iEgompuhrg6GDYOqquCxP8/r6uCb3xzYZ9XVBdvPE4vqTkz19fWu\nUyFFQtTcDAsXQmsrHHBA0NbR0f/zmho480xYsiT39xTyeb7r27IFzCDKu9FVVEBTEzQ05PwWM1vu\n7vVZ+yncRTIolsAcCkE1BDiwm2HsZhi7KMu6zKVPPt4zm5eZw/NB0bW1sHZtzvuocJf4SA7YQoZn\nEQWmA7soYwfDQ3nspJydlLOLsrTLTK8NdjnQ9ySH5m7Kov5PkZPvcwM3cG2wYga7d+f8XoW7RG+g\no94hHLA7KeMjRvMJI/d59DAi9LYeRgwwjIdH8udSzg7K2UkZu/KyzNan9xHE+t5lurZsy3y/J/n5\nGD5kHNuDP8Q8jdzDOM9d4mx/Azo1lLds2fuZA32eIdh3UM52xu55fMiYPusfMXpAj24q0raHGZ7J\ncT6Cnn3+uehtG8v2tFFezs6Qxuf9P8r3jKH7D9dhDP3/oxnyKipg0aK8fLTCvVTlMtUx2IDuJ5R3\nUE4nlWxjAp1Upn3exbg+Id3fo4eRA9rtYeyigu5+430C2/ZpS+6/77g9c0Cnto2gBxtQxZJ3vd/x\nSZOC9UId/K2pCYJ9AAdTB0LhHkfZRtupob1uHdx669735zhq7mY0m6liC5PYTFWf573LrUzcJ7g/\noiLrLoxhO+Po6hPlB9BBDa2M4cMcYn972hAfzo54h+tAgqrUz5YpQMBGSeFebAYa3AMcVXcxlvc5\nmPc4ZM8y+XkbB+4J8o8Z3W+ZE9hKFZuZyFYmsI2prGcC2xIR37nneeqykk7G8wFl5H6AKe+KJTBj\nHFQycAr3oSpdiA8yuD9iFOuZyjpqWUctrdTsWW5gCu9xCB8ydp/3DaeHg3mfg3mfKWxgNi9TxWYm\nsSXt8gA6KGdXWH8Sgd79rq0tbHgqMKVIKdyHkt5AX7eu/xDPctZIJ+N5m+m8xeF7lqs5jLXU0cZB\nffoOYxef4vfUso7PsjwxRg8eB/P+nuUBdOz/wbOw5jMVsCIDonCPQi6j8iwhvo1KXuVoVjCTFcxk\nJX/I20zvE+DGbmpoZTpvM5/FifH6OmpopZZ1TGYjw9mZvV6z4ETqgQa0QlkkMgr3QhnEqLyNap7n\nOJ7nOF5mNiuYyXr2XjJ5Ih38ISv5Er9mOm9zOG9xOG/xB7zDKD7pv6be0M401aGAFilKCvd8SR2d\nd3VBT0/wWoZR+W6MFczkaU5kGXN4nuNYw6EAlLGTI1nF5/ktM1nB0bzKTFYwmY37ngGSbTpEoS0S\nawr3MOUyOk/hwJt8mic4mSc4mSc5iQ6CQJ7Ceo7jeb7JTziO5/ksy6ngozTBbQpuEelD4R6W5mZo\nbITu7mA9w+h8J2X8NyfwKxawmPm8w2EATKWV+SzmZJ5gLk8x1TamhPjHUFOr4BaRrBTug5U8Ws9g\nN8b/43Pcw8U8yB/TwSRG8Amn8DhX8w+czqMcyrtY8il/i+5RiIvIflG474/+pl/SWEMdP+Nyfs5F\nrKOOMWznHB7mXB7mdJYyblLi5/MdHRqVi0hoFO4DlcP0iwOPcwr/xJX8mi9hOKfZYywacwPnbP85\nY2qrEiH+QGFrF5GSkctt9u4wszYzy3jrPDP7H2a208y+HF55Q0jv7bguumhvsKfYjfEA5zGLVziN\nx3iO4/kBf8O6ySfwyD2baei6jTG+Pbi8p0bnIpJHudwg+05gXqYOZlYG3Ag8GkJNQ0/vaL2feXUH\nHuRcZvEKX+EBehjBv076Lq13PM5f+18yZcMyhbmIFFTWcHf3Z4COLN2uBH4JtIVR1JCRw2j9FWZy\nEk9yHg+yizJ+MeIyVt79Epdt/ntGffXCwtYrIpKQy8g9IzObDJwL3Jqtb1HJMlrvZjTf4iY+w0u8\nxlHcxjd4teZsLrzjNMou/tMCFysi0lcYB1RvBr7v7rvNMl8p28wagUaAmpqajH0jk8Opjc9yPJdy\nF6uZzjfH3s1f/8NoJjbeXsAiRUQyCyPc64H7EsFeBZxpZjvd/eHUju7eBDRBcA/VELYdrtQzYVLs\nxljEQq7jr6i1Vp649jFOWnRJgYsUEclu0OHu7tN6n5vZncB/pAv2orBwYb/B3sl4LuYefs18GsY8\nxK039zDua39S4AJFRHKTNdzN7F5gLlBlZhuA6yC4W7C735bX6gqttTVt83qm8EWW8jbT+fElL3LF\nneeSZQZKRCRSWcPd3XM+5cPdLxtUNVHpnWdP84OkVRzB6TzKB1bJb659irmLTougQBGRgdEvVDPM\ns6/iCL7AM5RVjuWZp0cza5aCXUSKg8K9n3n2tdRyWtkTlI0dy29fHM306RHUJiKynxTuaebZNzOJ\nU3mM7vGH8PTTKNhFpOgM+kdMRav316cp8+w7KOd87mcDU1myBI4+OpryREQGozTDPcOvT7/L3/Mk\nJ9P0jeXMmRNBbSIiISjNcO9nnv3XnM2PuYqrvvgGl9z2RxEUJiISjtIM9zTz7G1U8zV+yqxZcOOv\njoigKBGR8JRmuKe5rs3/5FY6mcDPfw4jR0ZQk4hIiEoz3BctgoqKPauP8EUe5DyuO38VRx0VYV0i\nIiEprXDvPUPm4oth9GiYNIlPGMmV5bdy+MEfcPU9s6OuUEQkFKVznnvqL1G3bIGKCm7+k+dY/W/T\nWHoXjBgRbYkiImEpnZF7mjNktnUP54Z/P5SzzoLTT4+oLhGRPCidcE9zhsxNfJttuyv50Y8iqEdE\nJI9KJ9xTzpDZygRu4tt8ueI/OeaYiGoSEcmT0gn3lDNk/oWv08V4Fi7UhdlFJH5KJ9wbGqCpCWpr\n2cFw/qnsW5w0431m/+DMqCsTEQld1nA3szvMrM3MXuvn9QYzW2Fmr5rZs2Y2K/wyQ9LQAGvX8st7\ne9iw61N8+4aDo65IRCQvchm53wnMy/D6GuBEdz8a+BGJG2APGb3ntg8bFiybm7n9djj0UDjrrKiL\nExHJj6zh7u7PAB0ZXn/W3bcmVpcBU0KqbfCSr/7oDuvW8e7X/oannoKvfjXIexGROAo73i4H/ivk\nz9x/ac5tv/vjr2Ds5tJLI6pJRKQAQgt3MzuJINy/n6FPo5m1mFlLe3t7WJvuX8q57bsx7uJSTuUx\npk7N/+ZFRKISSrib2Uzgp8ACd9/SXz93b3L3enevr66uDmPTmaWc276MOaxlGpdMWpL/bYuIRGjQ\n4W5mNcCDwMXu/tbgSwpRyrntD3Euw+nhS3+rG3GISLxlvXCYmd0LzAWqzGwDcB0wHMDdbwN+CEwC\nfmJmADvdvT5fBQ9IQ0OwXLgQX9fKQ+Vf4eQjN1P59fOjrUtEJM/MU24QXSj19fXe0tJSsO29+irM\nnAm33x6cQCMiUozMbHkuA+iSORnwoYfADBYsiLoSEZH8K5lwf+QROPZYOOigqCsREcm/kgj3Dz6A\nF16AU0+NuhIRkcIoiXB/+mnYtQtOOSXqSkRECqMkwv2xx2DUKDj++KgrEREpjJII98cfh89/Pgh4\nEZFSEM9wT7oS5Kap9axcqSkZESkt8Qv3lCtBPrshuIjMFz5aGnFhIiKFE79wT7kS5DLmMJwejvnX\n/xVhUSIihRW/cE+5EuRzHM9neIlR69+OqCARkcKLX7gnXQlyB+W0UM8clu1zhUgRkTiLX7gnXQny\nVY7mIyo4fsRLQbuISImIX7g3NEBTE9TW8gLHAXDcjX+89wqRIiIlIH7hDkGQr13Ly9+4lQkToPaq\nc6KuSESkoOIZ7gmvvAKzZwdXgxQRKSWxDfddu2DFCpg1K+pKREQKL7bh/s47wenus2dHXYmISOFl\nDXczu8PM2szstX5eNzP7sZmtNrMVZvaZ8MscuJdfDpYauYtIKcpl5H4nMC/D62cA0xOPRuDWwZc1\neK+8AuXlMGNG1JWIiBRe1nB392eAjgxdFgB3e2AZMMHMDgmrwP31+uswfTqMHBl1JSIihRfGnPtk\nYH3S+oZEW6TeeAOOPDLqKkREolHQA6pm1mhmLWbW0t7enrft7NgBq1fDpz+dt02IiAxpYYT7RmBq\n0vqURNs+3L3J3evdvb66ujqETae3Zg3s3AlHHJG3TYiIDGlhhPti4JLEWTNzgE53fy+Ez91vb7wR\nLBXuIlKqyrN1MLN7gblAlZltAK4DhgO4+23AEuBMYDXQDXw1X8XmqjfcNS0jIqUqa7i7+4VZXnfg\nz0OrKARvvAEHHwyVlVFXIiISjVj+QvXNNzVqF5HSFstwf+cdOOywqKsQEYlO7MK9uxs2bYJp06Ku\nREQkOrEL97Vrg6XCXURKWezCfc2aYKlwF5FSFp9wb26GujrWnH0lAHXLfxlxQSIi0cl6KmRRaG6G\nxkbo7mYNdYziIw7+3iUw8WPdO1VESlI8Ru4LFwZHUoG11FHHWuyj7qBdRKQExSPcW1v3PF3DNKax\nZp92EZFSEo9wr6nZ87RPuCe1i4iUkniE+6JFUFHBB4xjGxOpZR1UVATtIiIlKB4HVBMHTTd+7w74\nPUyp+hhubtLBVBEpWfEId4CGBjYe1ACnweQHfgwnRl2QiEh04jEtk7AxcYuQyZHf5E9EJFoKdxGR\nGIpduE+cCKNHR12JiEi0cgp3M5tnZm+a2WozuybN6zVm9qSZ/c7MVpjZmeGXmt3GjRq1i4hADuFu\nZmXALcAZwAzgQjObkdLtL4H73f0Y4ALgJ2EXmguFu4hIIJeR+7HAand/1917gPuABSl9HBifeF4J\n/D68EnOncBcRCeRyKuRkYH3S+gbguJQ+/xt41MyuBMYAp4ZS3QDs3BncpEPhLiIS3gHVC4E73X0K\ncCZwj5nt89lm1mhmLWbW0t7eHtKmA++/D7t3K9xFRCC3cN8ITE1an5JoS3Y5cD+Auz8HjAKqUj/I\n3Zvcvd7d66urq/ev4v6K1GmQIiJ75BLuLwLTzWyamY0gOGC6OKVPK3AKgJkdSRDu4Q7Ns9i0KVge\nckghtyoiMjRlDXd33wlcASwFVhGcFbPSzK43s/mJblcDXzezV4B7gcvc3fNVdDptbcHywAMLuVUR\nkaEpp2vLuPsSYElK2w+Tnr8OnBBuaQPTG+4hz/aIiBSl2PxCta0Nxo+HUaOirkREJHqxCndNyYiI\nBBTuIiIxpHAXEYmh2IT7pk1w0EFRVyEiMjTEItx37YLNmzVyFxHpFYtw7+gILj2gcBcRCcQi3PUD\nJhGRvhTuIiIxpHAXEYkhhbuISAzFItw3bwaz4ObYIiISk3Dv6AiCvaws6kpERIaG2IT7AQdEXYWI\nyNARi3DfskXhLiKSLBbhrpG7iEhfCncRkRjKKdzNbJ6ZvWlmq83smn76nG9mr5vZSjP7RbhlZqZw\nFxHpK+tt9sysDLgFOA3YALxoZosTt9br7TMduBY4wd23mlnBzjjftQu2bYNJkwq1RRGRoS+Xkfux\nwGp3f9fde4D7gAUpfb4O3OLuWwHcvS3cMvu3bRu4a+QuIpIsl3CfDKxPWt+QaEt2OHC4mf23mS0z\ns3npPsjMGs2sxcxa2tvb96/iFB0dwVLhLiKyV1gHVMuB6cBc4ELgX8xsQmond29y93p3r6+urg5l\nw1u2BEuFu4jIXrmE+0ZgatL6lERbsg3AYnff4e5rgLcIwj7vNHIXEdlXLuH+IjDdzKaZ2QjgAmBx\nSp+HCUbtmFkVwTTNuyHW2a/ecNcBVRGRvbKGu7vvBK4AlgKrgPvdfaWZXW9m8xPdlgJbzOx14Eng\nL9x9S76KTqaRu4jIvrKeCgng7kuAJSltP0x67sB3Eo+C6p1zn7DPDL+ISOkq+l+odnQEwa4rQoqI\n7BWLcNeUjIhIX0Uf7lu36iYdIiKpij7cOzuhsjLqKkREhpbiDffmZqiro/PZ16h87pFgXUREgBzP\nlhlympuhsRG6u+mkksqPXoTGK4LXGhqirU1EZAgozpH7woXQ3Q0QhDudwfrChREXJiIyNBRnuLe2\nArCLYXQxPgj3pHYRkVJXnOFeUwNAF+MA9oZ7ol1EpNQVZ7gvWgQVFXQSnCZTSSdUVATtIiJSpAdU\nEwdNO//iHngPKqtGwM1NOpgqIpJQnOEO0NBAZ00DfAEqf3FrcBNAEREBinVaJqEzMdWuHzGJiPSl\ncBcRiSGFu4hIDCncRURiKKdwN7N5Zvamma02s2sy9DvPzNzM6sMrsX+dnTB8OIwaVYitiYgUj6zh\nbmZlwC3AGcAM4EIzm5Gm3zjgKuD5sIvsT+8VIc0KtUURkeKQy8j9WGC1u7/r7j3AfcCCNP1+BNwI\nfBxifRnpcr8iIunlEu6TgfVJ6xsSbXuY2WeAqe7+nyHWlpXCXUQkvUEfUDWzYcA/Alfn0LfRzFrM\nrKW9vX2wm1a4i4j0I5dw3whMTVqfkmjrNQ44CnjKzNYCc4DF6Q6qunuTu9e7e311dfX+V52gcBcR\nSS+XcH8RmG5m08xsBHABsLj3RXfvdPcqd69z9zpgGTDf3VvyUnEShbuISHpZw93ddwJXAEuBVcD9\n7r7SzK43s/n5LjAThbuISHo5XTjM3ZcAS1LafthP37mDLyu73buhq0vhLiKSTtH+QrWrC9wV7iIi\n6RRtuOvSAyIi/VO4i4jEUNGG+wcfBMvx46OtQ0RkKCracO/qCpbjxkVbh4jIUFS04b59e7BUuIuI\n7Ktow7135D52bLR1iIgMRUUf7hq5i4jsq2jDXdMyIiL9K9pw7+oK7sI0cmTUlYiIDD1FHe6abxcR\nSa+ow11TMiIi6RVtuG/frnAXEelP0Ya7pmVERPpX1OGukbuISHpFG+6alhER6V/RhrtG7iIi/csp\n3M1snpm9aWarzeyaNK9/x8xeN7MVZva4mdWGX2pfmnMXEelf1nA3szLgFuAMYAZwoZnNSOn2O6De\n3WcCDwD/J+xCU2laRkSkf7mM3I8FVrv7u+7eA9wHLEju4O5Punt3YnUZMCXcMvvq6QkeCncRkfRy\nCffJwPqk9Q2Jtv5cDvxXuhfMrNHMWsyspb29PfcqU+iiYSIimYV6QNXMLgLqgb9L97q7N7l7vbvX\nV1dX7/d2dLlfEZHMynPosxGYmrQ+JdHWh5mdCiwETnT3T8IpLz1dEVJEJLNcRu4vAtPNbJqZjQAu\nABYndzCzY4Dbgfnu3hZ+mX1pWkZEJLOs4e7uO4ErgKXAKuB+d19pZteb2fxEt78DxgL/bmYvm9ni\nfj4uFAp3EZHMcpmWwd2XAEtS2n6Y9PzUkOvKqHdaRnPuIiLpFeUvVDVyFxHJTOEuIhJDRR3umpYR\nEUmvKMN9+3YoK4NRo6KuRERkaCrKcO+9IqRZ1JWIiAxNRR3uIiKSXlGG+/btmm8XEcmkKMNdI3cR\nkcwU7iIiMVSU4a4bdYiIZFaU4a5b7ImIZFa04a6Ru4hI/xTuIiIxVHThvmMHfPKJpmVERDIpunDX\nXZhERLIrunDXFSFFRLLLKdzNbJ6ZvWlmq83smjSvjzSzf0u8/ryZ1YVdaC+N3EVEsssa7mZWBtwC\nnAHMAC40sxkp3S4Htrr7YcBNwI1hFwpAczNdp5wDwNgrL4Pm5rxsRkSk2OUycj8WWO3u77p7D3Af\nsCClzwLgrsTzB4BTzEK+ZmNzMzQ20vV+MHQf1/YONDYq4EVE0sgl3CcD65PWNyTa0vZJ3FC7E5gU\nRoF7LFwI3d10EczHjKMLuruDdhER6aOgB1TNrNHMWsyspb29fWBvbm0F4CA2cR4PcCBtfdpFRGSv\nXMJ9IzA1aX1Koi1tHzMrByqBLakf5O5N7l7v7vXV1dUDq7SmBoA/4jke4Ct8ivf6tIuIyF65hPuL\nwHQzm2ZmI4ALgMUpfRYDlyaefxl4wt09vDKBRYugoqJvW0VF0C4iIn1kDffEHPoVwFJgFXC/u680\ns+vNbH6i28+ASWa2GvgOsM/pkoPW0ABNTVBbG9xfr7Y2WG9oCH1TIiLFzsIeYOeqvr7eW1paItm2\niEixMrPl7l6frV/R/UJVRESyU7iLiMSQwl1EJIYU7iIiMaRwFxGJocjOljGzdmDdfr69CtgcYjnF\nQPtcGrTPpWEw+1zr7ll/BRpZuA+GmbXkcipQnGifS4P2uTQUYp81LSMiEkMKdxGRGCrWcG+KuoAI\naJ9Lg/a5NOR9n4tyzl1ERDIr1pG7iIhkUHThnu1m3XFgZneYWZuZvZbUdoCZ/cbM3k4sJ0ZZY9jM\nbKqZPWlmr5vZSjO7KtEe2/02s1Fm9oKZvZLY579KtE9L3Gh+deLG8yOirjVMZlZmZr8zs/9IrMd9\nf9ea2atm9rKZtSTa8v69Lqpwz/Fm3XFwJzAvpe0a4HF3nw48Tj4uqxytncDV7j4DmAP8eeK/bZz3\n+xPgZHefBcwG5pnZHIIbzN+UuOH8VoIb0MfJVQSXD+8V9/0FOMndZyed/pj373VRhTu53ay76Ln7\nM0BHSnPyTcjvAs4paFF55u7vuftLieddBH/5JxPj/fbA9sTq8MTDgZMJbjQPMdtnM5sCnAX8NLFu\nxHh/M8j797rYwj2Xm3XH1UHunri3IO8DB0VZTD6ZWR1wDPA8Md/vxBTFy0Ab8BvgHWBb4iY5EL/v\n+M3A94DdifVJxHt/IfgH+1EzW25mjYm2vH+vy8P+QMk/d3czi+VpTmY2Fvgl8C13/yAY2AXiuN/u\nvguYbWYTgIeAIyIuKW/M7Gygzd2Xm9ncqOspoM+5+0YzOxD4jZm9kfxivr7XxTZyz+Vm3XG1ycwO\nAUgs2yKuJ3RmNpwg2Jvd/cFEc+z3G8DdtwFPAscDExI3mod4fcdPAOab2VqCKdWTgf9LfPcXAHff\nmFi2EfwDfiwF+F4XW7jncrPuuEq+CfmlwK8irCV0ibnXnwGr3P0fk16K7X6bWXVixI6ZjQZOIzjW\n8CTBjeYhRvvs7te6+xR3ryP4u/uEuzcQ0/0FMLMxZjau9zlwOvAaBfheF92PmMzsTIJ5uzLgDndf\nFHFJoTOze4G5BFeO2wRcBzwM3A/UEFxN83x3Tz3oWrTM7HPAb4FX2Tsf+wOCefdY7reZzSQ4mFZG\nMNC6392vN7NDCUa2BwC/Ay5y90+iqzR8iWmZ77r72XHe38S+PZRYLQd+4e6LzGwSef5eF124i4hI\ndsU2LSMiIjlQuIuIxJDCXUQkhhTuIiIxpHAXEYkhhbuISAwp3EVEYkjhLiISQ/8f3U2TiTkGQRsA\nAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f05fff8feb8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'n_s' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-7b57aa200309>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m     \u001b[0;31m#under construction yet\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m \u001b[0msolve_a0\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mF\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-10-7b57aa200309>\u001b[0m in \u001b[0;36msolve_a0\u001b[0;34m(w, F)\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0;31m#take equidistant values in the s axis\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m     \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinspace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn_s\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0;31m#compute the values of sigma_j\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'n_s' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "\"\"\"\n",
     "def w(theta):\n",
     "    return theta**0 \n",
     "def wp(theta):\n",
     "    return theta*0\n",
+    "def F(theta):\n",
+    "    return 2*np.sin(theta)\n",
+    "\"\"\"    \n",
     "\n",
+    "def w(theta):\n",
+    "    return (np.cos(theta))**2\n",
+    "def wp(theta):\n",
+    "    return -2*np.sin(2*theta)\n",
     "def F(theta):\n",
     "    return 2*np.sin(theta)\n",
     "\n",
     "def solve_a0(w,F):\n",
     "    #using Explicit Euler Method to estimate de IVP\n",
+    "    t = np.linspace(0,50,100)\n",
+    "    tt = np.linspace(0,50,1000)\n",
+    "    h = t[1] - t[0]\n",
+    "    theta = np.zeros(t.shape)\n",
+    "    theta[0] = 0\n",
+    "    for i in range(99):\n",
+    "        theta[i+1] = theta[i] + h*w(theta[i])\n",
+    "    \n",
+    "    plt.plot(t,theta,\"ro\")\n",
+    "    plt.show()\n",
+    "    \n",
+    "    #reconstruction of thetha using QR factorization\n",
+    "    \n",
     "    \n",
     "    #take equidistant values in the s axis\n",
     "    s = np.linspace(0,2*np.pi,n_s+1)\n",
@@ -414,15 +462,13 @@
     "    #compute the values of sigma_j\n",
     "    \n",
     "    #under construction yet\n",
-    "    "
+    "solve_a0(w,F)    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -561,7 +607,7 @@
     "Consider the problem in the form:\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial u(\\theta,t)}{\\partial t} + \\frac{\\partial \\omega(\\theta)}{\\partial \\theta} u(\\theta,t) + \\frac{\\partial u(\\theta,t)}{\\partial \\theta} \\omega(\\theta) = \\varepsilon \\frac{\\partial^2 u(\\theta,t)}{\\partial \\theta^2}\n",
+    "\\frac{\\partial u(\\theta,t)}{\\partial t} + \\frac{\\mathrm{d} \\omega(\\theta)}{\\mathrm{d} \\theta} u(\\theta,t) + \\frac{\\partial u(\\theta,t)}{\\partial \\theta} \\omega(\\theta) = \\varepsilon \\frac{\\partial^2 u(\\theta,t)}{\\partial \\theta^2}\n",
     "$$\n",
     "\n",
     "Let be $w^{(k)}_{j,n}$ the value obtained using FFT for the derivative of $k$ order for $u(\\theta,t)$ evaluated in $\\theta_j$ for the time $t_n$. Let be $v_{j,n}$ the aproximation of $u(\\theta,t)$ evaluated in $\\theta_j$ for the time $t_n$. Put all the previous definitions together, the problem is reduced to an iterative method that calculates the next time step using the information of the values of $u(\\theta_j,t_n)$, the first derivative of $u(\\theta_j,t_n)$ and the second derivative of $u(\\theta_j,t_n)$ for the actual time. Consider that $\\theta_i$ and $t_n$ are $N_{\\theta}$ and $N_{t}$ equidistant points in the spatial and temporal axes.\n",
